added modified external page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shadcn-landing-page-template",
-  "author": "Leo Miranda",
+  "name": "LearnSync_updated_ui",
+  "author": "Jaswanth Reddy",
   "private": true,
   "version": "0.1.0",
   "type": "module",
